// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FilterForm Create form 1`] = `
.c1 {
  padding-top: 7px;
}

.c7 {
  height: 155px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c8 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c10 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c6 {
  cursor: pointer;
  margin-bottom: 30px;
  color: #FFF;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
}

.c6:hover {
  border-bottom: 1px solid #FFF;
}

.c5 {
  border-top: 2px solid #2F2F36;
  padding-top: 35px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
}

.c2 label {
  margin-bottom: 1px;
}

.c3 {
  position: absolute;
  right: 0;
  top: 5px;
}

.c4 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: auto auto;
}

.c0 {
  padding-top: 24px;
}

@media (min-width:1040px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c8 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c10 {
    width: 240px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <form
    className="c0"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className=""
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "maxWidth": "100%",
            "paddingBottom": "30px",
            "position": "relative",
          }
        }
      >
        <label
          htmlFor="name"
          style={
            Object {
              "border": "none",
              "borderTop": "2px solid #2F2F36",
              "color": "#71737e",
              "display": "block",
              "fontSize": "14px",
              "outline": "none",
              "paddingTop": "8px",
              "width": "100%",
            }
          }
        >
          <span>
            Filter Name
          </span>
        </label>
        <input
          id="name"
          name="name"
          onChange={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "color": "#FFF",
              "fontSize": "18px",
              "lineHeight": "24px",
              "outline": "none",
            }
          }
          type="text"
          value=""
        />
        <div
          style={
            Object {
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            className="c1"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        <span>
          Field
        </span>
      </label>
      <input
        id="field"
        name="field"
        type="hidden"
        value="field"
      />
      <div
        className="c3"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "height": "30px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "cursor": "pointer",
                  "display": "flex",
                  "height": "30px",
                }
              }
            >
              field
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "175px",
                "overflow": "hidden",
                "position": "absolute",
                "top": "46px",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              style={
                Object {
                  "borderTop": "none",
                  "cursor": "pointer",
                  "display": "block",
                  "padding": "7px",
                }
              }
            >
              field
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        <span>
          Filter Type
        </span>
      </label>
      <input
        id="filterType"
        name="filterType"
        type="hidden"
        value="checkbox"
      />
      <div
        className="c3"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "height": "30px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "cursor": "pointer",
                  "display": "flex",
                  "height": "30px",
                }
              }
            >
              checkbox
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "175px",
                "overflow": "hidden",
                "position": "absolute",
                "top": "46px",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              style={
                Object {
                  "borderTop": "none",
                  "cursor": "pointer",
                  "display": "block",
                  "padding": "7px",
                }
              }
            >
              checkbox
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="fieldType"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            <span>
              Field Type
            </span>
          </label>
          <input
            disabled={true}
            id="fieldType"
            name="fieldType"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value="string"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="unique"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            <span>
              Unique items
            </span>
          </label>
          <input
            disabled={true}
            id="unique"
            name="unique"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value="1"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <span
        className="c6"
        onClick={[Function]}
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
          }
        }
      >
        <span>
          Remove filter
        </span>
      </span>
    </div>
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <button
            className="c10"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            className="c10"
            disabled={true}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#71737e",
                "cursor": "default",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots FilterForm Edit form 1`] = `
.c1 {
  padding-top: 7px;
}

.c7 {
  height: 155px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c8 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c10 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c6 {
  cursor: pointer;
  margin-bottom: 30px;
  color: #FFF;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
}

.c6:hover {
  border-bottom: 1px solid #FFF;
}

.c5 {
  border-top: 2px solid #2F2F36;
  padding-top: 35px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
}

.c2 label {
  margin-bottom: 1px;
}

.c3 {
  position: absolute;
  right: 0;
  top: 5px;
}

.c4 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: auto auto;
}

.c0 {
  padding-top: 24px;
}

@media (min-width:1040px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c8 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c10 {
    width: 240px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <form
    className="c0"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className=""
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "maxWidth": "100%",
            "paddingBottom": "30px",
            "position": "relative",
          }
        }
      >
        <label
          htmlFor="name"
          style={
            Object {
              "border": "none",
              "borderTop": "2px solid #2F2F36",
              "color": "#71737e",
              "display": "block",
              "fontSize": "14px",
              "outline": "none",
              "paddingTop": "8px",
              "width": "100%",
            }
          }
        >
          <span>
            Filter Name
          </span>
        </label>
        <input
          id="name"
          name="name"
          onChange={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "color": "#FFF",
              "fontSize": "18px",
              "lineHeight": "24px",
              "outline": "none",
            }
          }
          type="text"
          value="name"
        />
        <div
          style={
            Object {
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            className="c1"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        <span>
          Field
        </span>
      </label>
      <input
        id="field"
        name="field"
        type="hidden"
        value="field"
      />
      <div
        className="c3"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "height": "30px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "cursor": "pointer",
                  "display": "flex",
                  "height": "30px",
                }
              }
            >
              field
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "175px",
                "overflow": "hidden",
                "position": "absolute",
                "top": "46px",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              style={
                Object {
                  "borderTop": "none",
                  "cursor": "pointer",
                  "display": "block",
                  "padding": "7px",
                }
              }
            >
              field
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        <span>
          Filter Type
        </span>
      </label>
      <input
        id="filterType"
        name="filterType"
        type="hidden"
        value="checkbox"
      />
      <div
        className="c3"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "height": "30px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "cursor": "pointer",
                  "display": "flex",
                  "height": "30px",
                }
              }
            >
              checkbox
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "175px",
                "overflow": "hidden",
                "position": "absolute",
                "top": "46px",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              style={
                Object {
                  "borderTop": "none",
                  "cursor": "pointer",
                  "display": "block",
                  "padding": "7px",
                }
              }
            >
              checkbox
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="fieldType"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            <span>
              Field Type
            </span>
          </label>
          <input
            disabled={true}
            id="fieldType"
            name="fieldType"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value="string"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="unique"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            <span>
              Unique items
            </span>
          </label>
          <input
            disabled={true}
            id="unique"
            name="unique"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value="1"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <span
        className="c6"
        onClick={[Function]}
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
          }
        }
      >
        <span>
          Remove filter
        </span>
      </span>
    </div>
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <button
            className="c10"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            className="c10"
            disabled={true}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#71737e",
                "cursor": "default",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
